# learn-fastapi

./: .flake8  .gitignore  Dockerfile  Makefile  alembic.ini  config.py  database.py  docker-compose.yaml  exeptions.py  grafana-dashboard.json  logger.py  main.py  prometheus.yml  pyproject.toml
app/: main.py
docker/: celery.sh
hotels_app/: database.py  main.py
hotels_app/bookings/: admin.py  dao.py  models.py  router.py  schemas.py
hotels_app/dao/: base.py
hotels_app/hotels/: admin.py  dao.py  models.py  router.py  schemas.py
hotels_app/images/: router.py
hotels_app/migrations/: env.py
hotels_app/migrations/versions/: 7eb681053564_create_rooms_users_bookings_models.py  a2f1508afd07_drop_some_of_the_bookings_table_.py  d92dfd38c004_initial_migration.py
hotels_app/pages/: router.py
hotels_app/rooms/: admin.py  dao.py  models.py  router.py  schemas.py
hotels_app/tasks/: celery_app.py  email_templates.py  tasks.py
hotels_app/templates/: hotels.html
hotels_app/tests/: conftest.py
hotels_app/tests/fixtures/: mock_bookings.json  mock_users.json
hotels_app/tests/integration_tests/bookings_tests/: test_api.py  test_dao.py
hotels_app/tests/integration_tests/users_tests/: test_api.py
hotels_app/tests/unit_tests/users_tests/: test_dao.py
hotels_app/users/: admin.py  auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
